--- a/src/acrouse_grid.css
+++ b/src/acrouse_grid.css
@@ -51,6 +51,15 @@ footer {
   color: #9fb2d4;
   text-align: left;
 }
+h4{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 20px;
+  margin-left: 20px;
+  padding:5px 10px 5px 10px;
+  color: #9fb2d4;
+  text-align: left;
+}
 .p4 {
   font-weight: bold;
   font-style:italic;
@@ -132,7 +141,11 @@ li {
 }
 .list {
   margin-top:20px;
-  margin-bottom:60px;
+  margin-bottom:60px;  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  color: #a1d2e5;
+  margin:20px;
 }
 
 
